--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -70,7 +70,7 @@
             <div class="row row-30">
                 <div class="col-md-9 order-md-1">
                     <p class="rights"><span>&copy;&nbsp; </span><span
-                            class="copyright"></span><span>&nbsp;</span><span>BHInternet</span><span>.&nbsp;</span><span>2020
+                            class="copyright"></span><span>&nbsp;</span><span>C.K</span><span>.&nbsp;</span><span>2021
                             </span><span>.&nbsp;</span><a href="#"></a></p>
                 </div>
                
